# tcc_cmake

./: 0001-fix-out-of-tree-build-in-windows.patch  CMakeLists.txt  main.c
.github/workflows/: cmake.yml
